syntax = "proto3";

package service;

option go_package = "/protobuf";

service MyService {
  rpc MyMethod(MyRequest) returns (MyResponse);
}

message MyRequest {
  string data = 1;
}

message MyResponse {
  string result = 1;
}
